--- a/works.html
+++ b/works.html
@@ -144,16 +144,16 @@
 
   <!-- Galería para pantallas grandes -->
   <div class="gallery-container d-none d-md-flex justify-content-center flex-wrap">
-    <div class="gallery-item p-2"><img src="images/Imagen2a.jpg" class="img-fluid" alt="Gallery Image"></div>
-    <div class="gallery-item p-2"><img src="images/Imagen3a.jpg" class="img-fluid" alt="Gallery Image"></div>
-    <div class="gallery-item p-2"><img src="images/imagen1.jpg" class="img-fluid" alt="Gallery Image"></div>
-    <div class="gallery-item p-2"><img src="images/imagen4.jpg" class="img-fluid" alt="Gallery Image"></div>
-    <div class="gallery-item p-2"><img src="images/imagen5.JPG" class="img-fluid" alt="Gallery Image"></div>
-    <div class="gallery-item p-2"><img src="images/imagen6.JPG" class="img-fluid" alt="Gallery Image"></div>
-    <div class="gallery-item p-2"><img src="images/imagen7.JPG" class="img-fluid" alt="Gallery Image"></div>
-    <div class="gallery-item p-2"><img src="images/imagen8.JPG" class="img-fluid" alt="Gallery Image"></div>
-    <div class="gallery-item p-2"><img src="images/imagen9.JPG" class="img-fluid" alt="Gallery Image"></div>
-    <div class="gallery-item p-2"><img src="images/imagen10.JPG" class="img-fluid" alt="Gallery Image"></div>
+    <div class="gallery-item p-2"><img src="images/imagen (1).jpg" class="img-fluid" alt="Gallery Image"></div>
+    <div class="gallery-item p-2"><img src="images/imagen (10).jpg" class="img-fluid" alt="Gallery Image"></div>
+    <div class="gallery-item p-2"><img src="images/imagen (2).jpg" class="img-fluid" alt="Gallery Image"></div>
+    <div class="gallery-item p-2"><img src="images/imagen (3).jpg" class="img-fluid" alt="Gallery Image"></div>
+    <div class="gallery-item p-2"><img src="images/imagen (4).jpg" class="img-fluid" alt="Gallery Image"></div>
+    <div class="gallery-item p-2"><img src="images/imagen (5).jpg" class="img-fluid" alt="Gallery Image"></div>
+    <div class="gallery-item p-2"><img src="images/imagen (6).jpg" class="img-fluid" alt="Gallery Image"></div>
+    <div class="gallery-item p-2"><img src="images/imagen (7).jpg" class="img-fluid" alt="Gallery Image"></div>
+    <div class="gallery-item p-2"><img src="images/imagen (8).jpg" class="img-fluid" alt="Gallery Image"></div>
+    <div class="gallery-item p-2"><img src="images/imagen (9).jpg" class="img-fluid" alt="Gallery Image"></div>
   </div>
   <center><a class="btn btn-light explore-btn" href="https://www.tumblr.com/idysphotography">ver más</a></center>
 </section>
